fix: responsive issues with overflowing content

--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-	width: 100vw;
+	width: 100%;
 	height: 100svh;
 	overflow: hidden;
 	padding-block: 10rem 5rem;
@@ -77,7 +77,7 @@
 
 		@media (width <= 475px) {
 			text-align: center;
-			font-size: clamp(4.625rem, -0.3893rem + 26.7429vw, 7.55rem);
+			font-size: clamp(2.9rem, -0.4818rem + 27.0545vw, 7.55rem);
 		}
 	}
 
@@ -92,7 +92,8 @@
 .stickerWrapper {
 	position: absolute;
 	bottom: 85%;
-	right: -5px;
+	right: 0;
+	transform: translate(5px 0);
 	transform: rotate(24deg);
 	z-index: 0;
 	width: clamp(5rem, 3.924rem + 5.063vw, 10rem);
